@@ -1,7 +1,6 @@
-package ovh.excale.mc.uhc.misc;
+package ovh.excale.mc.uhc.world;
 
 import org.bukkit.Bukkit;
-import org.bukkit.GameRule;
 import org.bukkit.World;
 import org.bukkit.WorldCreator;
 import org.bukkit.block.Biome;
@@ -12,16 +11,26 @@ import java.io.File;
 import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.logging.Level;
+import java.util.stream.Stream;
 
+import static org.bukkit.GameRule.*;
 import static org.bukkit.block.Biome.*;
 
 // TODO: make this class instance-based
-public class UhcWorldUtil {
+public class WorldUtils {
 
 	private static final int[] sampleCoords = new int[] { -48, -32, -16, 0, 16, 32, 48 };
 
 	private static final Biome[] OCEANS = new Biome[] {
-			OCEAN, COLD_OCEAN, WARM_OCEAN, FROZEN_OCEAN, LUKEWARM_OCEAN, DEEP_OCEAN, DEEP_COLD_OCEAN, DEEP_FROZEN_OCEAN, DEEP_LUKEWARM_OCEAN,
+			OCEAN,
+			COLD_OCEAN,
+			WARM_OCEAN,
+			FROZEN_OCEAN,
+			LUKEWARM_OCEAN,
+			DEEP_OCEAN,
+			DEEP_COLD_OCEAN,
+			DEEP_FROZEN_OCEAN,
+			DEEP_LUKEWARM_OCEAN,
 	};
 
 	private static boolean isOcean(Biome biome) {
@@ -32,21 +41,21 @@ public class UhcWorldUtil {
 		return isOcean;
 	}
 
-	private static boolean centerOceanCheck(@NotNull World world) {
+	private static boolean notOcean(@NotNull World world) {
 
 		boolean notOcean = true;
 
 		for(int i = 0; i < sampleCoords.length && notOcean; i++)
 			for(int j = 0; j < sampleCoords.length && notOcean; j++)
-				notOcean = !isOcean(world.getBiome(sampleCoords[i], sampleCoords[j]));
+				notOcean = !isOcean(world.getBiome(sampleCoords[i], 64, sampleCoords[j]));
 
-		return !notOcean;
+		return notOcean;
 	}
 
 	public static @NotNull Optional<World> generate() {
 		Optional<World> optional = Optional.empty();
 		long millis = System.currentTimeMillis();
-		String name = String.format("%x", millis) + ".xkuhc";
+		String name = "%x.xkuhc".formatted(millis);
 
 		WorldCreator worldCreator = new WorldCreator(name).seed(millis);
 		World world = null;
@@ -56,18 +65,20 @@ public class UhcWorldUtil {
 		else
 			try {
 				world = Bukkit.getScheduler()
-						.callSyncMethod(UHC.plugin(), worldCreator::createWorld)
+						.callSyncMethod(UHC.instance(), worldCreator::createWorld)
 						.get();
 			} catch(Exception e) {
-				UHC.logger()
+				UHC.log()
 						.log(Level.WARNING, e.getMessage(), e);
 			}
 
-		if(world != null && !centerOceanCheck(world)) {
+		if(world != null && notOcean(world)) {
 
-			world.setGameRule(GameRule.NATURAL_REGENERATION, false);
-			world.setGameRule(GameRule.SHOW_DEATH_MESSAGES, false);
-			world.setGameRule(GameRule.DO_WEATHER_CYCLE, false);
+			world.setGameRule(SPECTATORS_GENERATE_CHUNKS, false);
+			world.setGameRule(NATURAL_REGENERATION, false);
+			world.setGameRule(SHOW_DEATH_MESSAGES, false);
+			world.setGameRule(DO_WEATHER_CYCLE, false);
+			world.setGameRule(DO_INSOMNIA, false);
 			world.setWeatherDuration(0);
 
 			optional = Optional.of(world);
@@ -78,18 +89,20 @@ public class UhcWorldUtil {
 
 	public static void purgeWorlds(Consumer<Integer> then) {
 		Bukkit.getScheduler()
-				.runTaskAsynchronously(UHC.plugin(), () -> {
+				.runTaskAsynchronously(UHC.instance(), () -> {
 
 					File[] worlds = Bukkit.getWorldContainer()
 							.listFiles((dir, name) -> name.endsWith(".xkuhc") && Bukkit.getWorld(name) == null);
 
-					int i = 0;
-					for(File world : worlds)
-						if(deleteFile(world, world))
-							i++;
+					int count = (int) Optional.ofNullable(worlds)
+							.stream()
+							.flatMap(Stream::of)
+							.map(worldFolder -> deleteFile(worldFolder, worldFolder))
+							.filter(bool -> bool)
+							.count();
 
 					if(then != null)
-						then.accept(i);
+						then.accept(count);
 
 				});
 
@@ -100,7 +113,7 @@ public class UhcWorldUtil {
 		if(files != null)
 			for(File file1 : files)
 				if(!deleteFile(master, file1))
-					UHC.logger()
+					UHC.log()
 							.warning("Can't delete file " + file1.getName() + " from world " + master.getName());
 		return file.delete();
 	}
